Simplify navigation by removing dropdowns and search
Removed dropdown menus and search form from navigation.

--- a/index.html
+++ b/index.html
@@ -5,53 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>academic shop nusantara</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
   <body>
     <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand">ACADEMIC SHOP NUSANTARA</a>
-        <div class="dropdown">
+        <div class="nav-menu">
             <button class="button">Karya Ilmiah</button>
-            <div class="content">
-                <a href="#">Joki Makalah</a>
-                <a href="#">Joki Artikel Jurnal</a>
-                <a href="#">Joki Skripsi</a>
-            </div>
-        </div>
-        <div class="dropdown">
             <button class="button">Turnitin</button>
-            <div class="content">
-                <a href="#">Cek Plagiasi</a>
-                <a href="#">Parafrase</a>
-            </div>
-        </div>
-        <div class="dropdown">
             <button class="button">Desain</button>
-            <div class="content">
-                <a href="#">Template Skripsi</a>
-                <a href="#">Template Artikel</a>
-                <a href="#">Template Presentasi</a>
-                <a href="#">Desain Poster</a>
-                <a href="#">Jasa Power Point</a>
-            </div>
-        </div>
-        <div class="dropdown">
             <button class="button">Tentang</button>
-            <div class="content">
-                <a href="#">Tentang ASN</a>
-                <a href="#">Kontak Kami</a>
-                <a href="#">Syarat dan Ketentuan</a>
-            </div>
         </div>
     </div>
     </nav>
-    <div class="container-fluid search-wrapper">
-    <form class="d-flex" role="search" id="searchForm">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="searchInput"/>
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-    </div>
 
+
+    
      <div class="container-fluid mt-4">
   <div class="card-wrapper">
     
