Add image for Joki Makalah in index.html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
     </div>
     </nav>
-
-
-    
+    <div>
+      <img src="img/desain-poster.png" class="card-img-top" alt="Joki Makalah">
+    </div>
      <div class="container-fluid mt-4">
   <div class="card-wrapper">
     
