Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     </nav>
     <div>
-      <img src="img/desain-poster.png" class="card-img-top" alt="Joki Makalah">
+      <img src="img/poster.png" class="card-img-top" alt="Joki Makalah">
     </div>
      <div class="container-fluid mt-4">
   <div class="card-wrapper">
