--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="card-body">
         <h5 class="card-title">Joki Makalah</h5>
         <p class="card-text">Layanan joki makalah cepat, rapi, dan sesuai aturan kampus.</p>
-        <a href="joki makalah/index.html" class="btn btn-primary">Order</a>
+        <a href="order-joki-makalah.html" class="btn btn-primary">Order</a>
       </div>
     </div>
 
