--- a/makalah/makalah.html
+++ b/makalah/makalah.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Panggil CSS -->
-    <link rel="stylesheet" href="order-joki-makalah.css">
+    <link rel="stylesheet" href="makalah.css">
 </head>
 <body>
 
