--- a/makalah/makalah.html
+++ b/makalah/makalah.html
@@ -49,14 +49,36 @@ function beliSekarang() {
     const fakultas = document.getElementById("fakultas").value;
     const kampus = document.getElementById("kampus").value;
     const judul = document.getElementById("judul").value || "-";
-    const voucher = document.getElementById("voucher").value;
+    const voucherInput = document.getElementById("voucher").value.toUpperCase();
 
-    let harga = 100000;
+    let hargaAwal = 100000;
+    let diskon = 0;
 
-    // Voucher contoh
-    if (voucher.toUpperCase() === "DISKON20") {
-        harga = 80000;
+    const voucher5 = [
+        "HEMAT5A","HEMAT5B","HEMAT5C","HEMAT5D","HEMAT5E",
+        "HEMAT5F","HEMAT5G","HEMAT5H","HEMAT5I","HEMAT5J"
+    ];
+
+    const voucher10 = [
+        "HEMAT10A","HEMAT10B","HEMAT10C","HEMAT10D","HEMAT10E",
+        "HEMAT10F","HEMAT10G","HEMAT10H","HEMAT10I","HEMAT10J"
+    ];
+
+    const voucher15 = [
+        "HEMAT15A","HEMAT15B","HEMAT15C","HEMAT15D","HEMAT15E",
+        "HEMAT15F","HEMAT15G","HEMAT15H","HEMAT15I","HEMAT15J"
+    ];
+
+    if (voucher5.includes(voucherInput)) {
+        diskon = 5;
+    } else if (voucher10.includes(voucherInput)) {
+        diskon = 10;
+    } else if (voucher15.includes(voucherInput)) {
+        diskon = 15;
     }
+
+    const potongan = hargaAwal * diskon / 100;
+    const hargaAkhir = hargaAwal - potongan;
 
     const pesan = `
 *JOKI MAKALAH*
@@ -67,8 +89,9 @@ Program Studi: ${prodi}
 Fakultas: ${fakultas}
 Kampus: ${kampus}
 Judul Makalah: ${judul}
-Voucher: ${voucher || "-"}
-Harga: Rp ${harga.toLocaleString("id-ID")}
+Voucher: ${voucherInput || "-"}
+Diskon: ${diskon}%
+Total Bayar: Rp ${hargaAkhir.toLocaleString("id-ID")}
 -----------------------
 Saya ingin lanjut pemesanan.
     `;
