--- a/makalah/makalah.html
+++ b/makalah/makalah.html
@@ -60,7 +60,7 @@ const voucher15 = [
 ];
 
 let diskon = 0;
-let voucherAktif = "";
+let voucherAktif = "HEMAT15B";
 
 function cekVoucher() {
     const voucherInput = document.getElementById("voucher").value.toUpperCase();
